manifests/dev/dozzle/Deployment-dozzle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: dozzle
    app.kubernetes.io/name: dozzle
    app.kubernetes.io/version: latest
  name: dozzle
  namespace: dozzle
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: dozzle
      app.kubernetes.io/name: dozzle
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dozzle
        app.kubernetes.io/name: dozzle
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: DOZZLE_NO_ANALYTICS
              value: "true"
            - name: DOZZLE_MODE
              value: k8s
          image: amir20/dozzle:latest
          imagePullPolicy: IfNotPresent
          name: dozzle
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: containerd-socket
              readOnly: true
      nodeSelector:
        kubernetes.io/hostname: nasnix
      serviceAccountName: dozzle
      volumes:
        - hostPath:
            path: /run/k3s/containerd/containerd.sock
            type: Socket
          name: containerd-socket
