manifests/dev/dozzle/Service-dozzle.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: dozzle
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: dozzle
    app.kubernetes.io/name: dozzle
  type: ClusterIP
