manifests/dev/dozzle/Ingress-dozzle.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle
  namespace: dozzle
spec:
  ingressClassName: tailscale
  rules:
    - host: dozzle.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: dozzle
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - dozzle.bearded-snake.ts.net
